2023-Aug-31 Struan Robertson

		* System.cpp, gWellProperties.cpp: Modifications to allow collision and radiation
		temperatures to differ.

2023-Aug-28 Struan Robertson

		* GaussianDistFragmentation.cpp: Revision of the Gaussian fragmentation distribution
		class to include unit parsing and some minor tidying.

2023-Aug-28 Struan Robertson

		* MesmerEnv.h/.cpp, ConditionsManager.cpp: Preparative changes for improved support
		for radiation transitions.

2023-Aug-28 Struan Robertson

		* GaussianDistFragmentation.cpp: Initial revision of the Gaussian fragmentation distribution
		class.

2023-Aug-21 Struan Robertson

		* MesmerILT.cpp: Fix for secondary activation energy parsing issue.

		* UnitsConversion.cpp: Add a unit conversion for the synonym "kj/mol".

2023-May-15 Struan Robertson

		* EckartCoefficients.cpp, ErrorPropagation.cpp, QMRotor.cpp, WKBTunnelingCoefficients, 
		ZhuNakamuraCrossing.cpp: Changes needed to fix Win64 build warnings.

2023-May-15 Struan Robertson

		* DensityOfStates.cpp/.h and all classes that derive from DensityOfStates, gWellProperties.cpp,
		Molecule.h, RRKM.cpp, Reaction.cpp, vector3.h, vector3.cpp: Changes needed to fix Win64 build 
		warnings.

2023-May-07 Struan Robertson

		* Reaction.h and all classes that derive from Reaction, ParallelManager.h, Structure.h,
		gWellProperties.h: Changes needed to fix Win64 build warnings.

2023-May-01 Struan Robertson

		* Mesmer.vcproj, TinyXML.vcproj, qd.vcproj: Project changes needed for Win64 build.

		* main.cpp, System.h: Version updated to 7.1.

2023-March-12 Struan Robertson

		* Molecule.h/.cpp, MolecularManager.h/.cpp, AnalyticalRepresentation.cpp, gWellProperties.cpp:
		Minor fix to Analytical Representation to stop NASA polynomials being calculated for bath gases
		as these often have insufficient information.

2023-March-08 Struan Robertson

		* Documentation update.

2023-March-05 Struan Robertson
