@@ -1,3 +1,13 @@
+2023-Sep-09 Struan Robertson
+
+		* MesmerILT.cpp: Further changes in for secondary activation energy parsing.
+
+2023-Sep-03 Struan Robertson
+
+		* System.cpp, gWellRadiationTransition.cpp, MesmerEnv.h/.cpp, ConditionsManager.h/.cpp: 
+		Introduction of a sliding temperature scale depending on bath gas concentration to 
+		account for the effects of a radiation field.
+
 2023-Aug-31 Struan Robertson
 
 		* System.cpp, gWellProperties.cpp: Modifications to allow collision and radiation
